--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               placeholder="Enter your favorite animal"
             />
           </div>
-          <button type="button" class="btn btn-primary w-100">Generate Button</button>
+          <button type="button" class="btn btn-primary w-100" onclick="getFullName()">Generate Button</button>
         </form>
       </div>
     </main>
