javascript shows on website

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <h1>What's your fantasy name?</h1>
           <p>Put all of your information below to generate your name</p>
         </div>
+
+      <!-- results -->
+        <div id="result"></div>
         <!-- start of form -->
         <form id="fantasyForm" class="mb-4">
           <!-- firstname -->
@@ -83,8 +86,9 @@
               placeholder="Enter your favorite animal"
             />
           </div>
-          <button type="button" class="btn btn-primary w-100" onclick="getFullName()">Generate Button</button>
+          <div type="button" class="btn btn-primary w-100" onclick="getFullName()">Generate Button</div>
         </form>
+        
       </div>
     </main>
     <footer>
