added first name

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/gjt4uoi.css">
   </head>
 
   <body>
@@ -27,8 +28,8 @@
       <div class="container">
         <!-- greeting & instructions -->
         <div class="text-center mb-4">
-          <h1>What's your fantasy name?</h1>
-          <p>Put all of your information below to generate your name</p>
+          <h1 class="mt-3">What's your Cookie name?</h1>
+          <p>Put all of your information below to generate your name.<br>This will be your name if you ever visit the Cookie Run Kingdom Universe.</p>
         </div>
 
       <!-- results -->
