changed color input into a floating select

--- a/index.html
+++ b/index.html
@@ -84,13 +84,20 @@
           </div>
 <!-- fav color -->
           <div class="form-floating mb-3">
-            <input
-              type="text"
-              class="form-control"
-              id="favColor"
-              placeholder="Enter your favorite color"
-            />
-            <label for="favColor">Favorite Color</label>
+            <select class="form-select" id="favColor">
+              <option value="red">Red</option>
+              <option value="orange">Orange</option>
+              <option value="yellow">Yellow</option>
+              <option value="green">Green</option>
+              <option value="blue">Blue</option>
+              <option value="purple">Purple</option>
+              <option value="pink">Pink</option>
+              <option value="brown">Brown</option>
+              <option value="white">White</option>
+              <option value="black">Black</option>
+              <option value="grey">Grey</option>
+            </select>
+            <label for="favColor">Select your Favorite Color</label>
           </div>
           <!-- fav animal -->
           <div class="form-floating mb-3">
