--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div class="container">
         <!-- greeting & instructions -->
         <div class="text-center mb-4 intro">
-          <h1 class="mt-3">What's your Cookie name?</h1>
-          <p>Put all of your information below to generate your name.<br>This will be your name if you ever visit the Cookie Run Kingdom Universe.</p>
+          <h1 class="mt-3">What's your Cookie name? 🍪</h1>
+          <p>Type all of your information and select the options below to generate your name.<br>This will be your name if you ever visit the Cookie Run Kingdom Universe.<br>Cookie will be added after your name.</p>
         </div>
 
       <!-- results -->
@@ -41,7 +41,7 @@
         <form id="fantasyForm" class="mb-4">
 <!-- first name and last name -->
           <div class="row g-2">
-            <div class="col-md">
+            <div class="col-md mt-3">
               <div class="form-floating">
                 <input
               type="text"
@@ -52,7 +52,7 @@
                 <label for="firstName">First Name</label>
               </div>
             </div>
-            <div class="col-md">
+            <div class="col-md mt-3">
               <div class="form-floating">
                 <input
               type="text"
